# FileJack

./: ACCESS_CONTROL.md  ACCESS_CONTROL_SUMMARY.md  ANALYSIS_REPORT.md  COMPLETION_REPORT.md  CONVERSATION_LOG.md  Cargo.toml  DOCUMENTATION_STATUS.md  FUNCTIONALITY_ANALYSIS.md  LICENSE  PROJECT_SUMMARY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TOOLS_UPDATE.md  UPDATED_ANALYSIS_REPORT.md  filejack.example.json  test_server.sh
.github/workflows/: ci.yml  release.yml
examples/: access_control.rs  basic_usage.rs  file_operations.rs
src/: access_control.rs  config.rs  error.rs  file_ops.rs  lib.rs  main.rs  mcp.rs  protocol.rs  rate_limit.rs
tests/: integration_tests.rs  security_tests.rs
