[package]
name = "filejack"
version = "0.1.0"
edition = "2021"
authors = ["FileJack Contributors"]
description = "MCP Server for Reading and Writing Files"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.4"
governor = "0.6"
nonzero_ext = "0.3"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "filejack"
path = "src/main.rs"

[lib]
name = "filejack"
path = "src/lib.rs"
